--- a/test-built-web-components.html
+++ b/test-built-web-components.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <title>Web Components</title>
 
-    <script src="dist/mui-modal/mui-modal.full.umd.js"></script>
-    <script src="dist/simple-box/simple-box.full.umd.js"></script>
+    <script src="dist/mui-modal.full.umd.js"></script>
 </head>
 <body>
-    <mui-modal buttonlabel="real button label"></mui-modal>
-    <simple-box text="real simple box" variant="h4"></simple-box>
-    <simple-box text="console warning for invalid variant" variant="h8"></simple-box>
+    <mui-modal buttonLabel="Click Here"></mui-modal>
 </body>
 </html>
