--- a/complete-demo.html
+++ b/complete-demo.html
@@ -146,11 +146,11 @@
     </div>
 
     <!-- Load dependencies first -->
-    <script src="./dist/dependencies.full.umd.js"></script>
+    <script src="./dependencies.full.umd.js"></script>
     
     <!-- Load all web components -->
-    <script src="./dist/simple-box.full.umd.js"></script>
-    <script src="./dist/mui-modal.full.umd.js"></script>
-    <script src="./dist/blog-app.full.umd.js"></script>
+    <script src="./simple-box.full.umd.js"></script>
+    <script src="./mui-modal.full.umd.js"></script>
+    <script src="./blog-app.full.umd.js"></script>
 </body>
 </html>
